fix(date-picker): avoid overlap from the closing action on the calendar (DEJS-1040)

--- a/projects/deja-js/component/date-picker/date-picker.component.scss
+++ b/projects/deja-js/component/date-picker/date-picker.component.scss
@@ -50,6 +50,7 @@ deja-date-picker {
 		position: relative;
 		right: 2.7rem;
 		top: 0;
+        height: 40px;
 
 		button.mat-mini-fab {
 			background: none;
